--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Este es el título interesante del post</h1>
             <p>Y este es el párrafo de inicio donde se explicarán cosas increíbles</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero expedita quas ex earum voluptatibus quia, id dolore odio inventore, est esse laboriosam commodi corrupti, rerum dolorem hic quibusdam veritatis optio?</p>
         </div>
     </div>
 </body>
