--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,9 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero expedita quas ex earum voluptatibus quia, id dolore odio inventore, est esse laboriosam commodi corrupti, rerum dolorem hic quibusdam veritatis optio?</p>
             <p>gola</p>
         </div>
+        <div class="footer">
+            Footer de la página :D
+        </div>
     </div>
 </body>
 </html>
