Arreglo de un error

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
             <h1>Este es el título interesante del post</h1>
             <p>Y este es el párrafo de inicio donde se explicarán cosas increíbles</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero expedita quas ex earum voluptatibus quia, id dolore odio inventore, est esse laboriosam commodi corrupti, rerum dolorem hic quibusdam veritatis optio?</p>
-            <p>gola</p>
+            <p>Mi blog!</p>
         </div>
         <div class="footer">
             Footer de la página :D
